examples/errors/try_catch_helper.molt
throw(error("helper failed", record { source: "import" }))
